--- a/Manuscript_Figures.Rmd
+++ b/Manuscript_Figures.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Estrogen Receptor Alpha aPCR Timeseries"
+title: "Estrogen Receptor Alpha qPCR Timeseries"
 author: "Andrew Holding"
 date: "1/22/2018"
 output: pdf_document
